--- a/public/index.html
+++ b/public/index.html
@@ -87,13 +87,13 @@
       </div>
 
       <div class="home-img">
-        <img src="../../assets/anya-forger-pointing.png" alt="" />
+        <img src="../assets/anya-forger-pointing.png" alt="" />
       </div>
     </section>
 
     <section class="about" id="about">
       <div class="about-img">
-        <img src="../../assets/about.png" alt="" />
+        <img src="../assets/about.png" alt="" />
       </div>
 
       <div class="about-content">
@@ -162,7 +162,7 @@
 
       <div class="project-container">
         <div class="project-box">
-          <img src="../../assets/rest-api.png" alt="" />
+          <img src="../assets/rest-api.png" alt="" />
 
           <div class="project-layer">
             <h4>Rest Api</h4>
@@ -174,7 +174,7 @@
           </div>
         </div>
         <div class="project-box">
-          <img src="../../assets/topup.png" alt="" />
+          <img src="../assets/topup.png" alt="" />
 
           <div class="project-layer">
             <h4>Top Up Games</h4>
@@ -188,7 +188,7 @@
           </div>
         </div>
         <div class="project-box">
-          <img src="../../assets/rest-api02.png" alt="" />
+          <img src="../assets/rest-api02.png" alt="" />
           <div class="project-layer">
             <h4>Rest Api</h4>
             <p>This project is designed to About Rest Api</p>
